# data_forge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml.backup  pyproject.toml  requirements.txt  shopify_oauth_helper.py  test_pipeline_generator.py  test_shopify_connection.py  test_shopify_hook.py  test_validation.py
.github/workflows/: ci.yml
dags/: .airflowignore  README.md  dag_builder.py  dag_generator.py  google_sheets.json  pipeline_dag_generator.py  test_shopify_hook_dag.py
dags/configs/: example_gsheet_to_postgres.json  example_shopify_customers_to_postgres.json  example_shopify_orders_to_postgres.json  example_shopify_products_to_postgres.json
dags/factories/: __init__.py  destination_factory.py  source_factory.py  transform_factory.py
dags/hooks/: __init__.py  shopify_hook.py
dags/src/: google_sheet_extractor.py  helpers.py  postgres_loader.py
dags/tasks/: __init__.py
dags/tasks/destinations/: __init__.py  base_destination.py  postgres_destination.py
dags/tasks/sources/: __init__.py  base_source.py  gsheet_source.py  shopify_source.py
dags/tasks/transforms/: __init__.py  base_transform.py  common_transforms.py  validation_transforms.py
docs/: ARCHITECTURE.md  CONNECTION_SETUP.md  CONNECTORS.md  EXTENDING.md
plugins/: README.md
