[tool.poetry]
name = "data-forge"
version = "0.1.0"
description = "ETL pipelining tool"
authors = ["Mohamed Rabii Chaker chakerrabia9@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.5"
apache-airflow="2.10.0"
gspread="6.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
